# tree-sitter-octizys

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  TODO.md  binding.gyp  comment.oct  go.mod  grammar.js  justfile  package-lock.json  package.json  pyproject.toml  setup.py  some.html  some.oct  tree-sitter.json
bindings/c/: tree-sitter-octizys.h  tree-sitter-octizys.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_octizys/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOctizysTests/: TreeSitterOctizysTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  instance.txt  literals.txt  multiplicity.txt  top_function.txt
