[package]
name = "tree-sitter-octizys"
description = "A functional laguage"
version = "0.1.0"
authors = ["Luis Alberto Díaz Díaz <73986926+Luis-omega@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "octizys"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/luis-omega/tree-sitter-octizys.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
